# claude-code

./: CLAUDE.md  README.md  fts5-reindex.py
.claude-plugin/: marketplace.json
apps/meeting-notes/: .env.example  main.py  pyproject.toml
apps/meeting-notes/services/: anthropic_client.py  brave_search.py  markdown_to_blocks.py  notion_client.py
apps/meeting-notes/static/: index.html
apps/meeting-notes/templates/: system_prompt.md
commands/: deep-research.md  meeting-notes.md  pulse.md
output/: 20260209_BO-OMS_변동재고_마감재고_기준_논의.md  20260210_옴니채널_재고홀딩_반품_보험_프로세스_정의.md
plugins/deep-thinking/: README.md
plugins/deep-thinking/.claude-plugin/: plugin.json
plugins/deep-thinking/commands/: blog-cover.md  deep-research.md  forge-prompt.md  ground.md  meeting-notes.md  pulse.md  translate-kr.md
