[project]
name = "meeting-notes"
version = "0.1.0"
description = "Meeting notes generator web app with Anthropic AI + Notion upload"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
